css/style.css
body {
	min-width: 1280px;
	width: 100%;
	height: 100%;
	margin: 0px;
	padding: 0px;
	font-family: 'Raleway', sans-serif;
	background-color: #FFFFFF;

}
#spinner {
	position: fixed;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
	z-index: 9999;
	background: url('../images/728.gif') 50% 50% no-repeat #FFFFFF;
}

.homebody{
	min-width: 1280px;
	width: 100%;
	height: 100%;
	margin: 0px;
	padding: 0px;
}

.homebox {
	margin: 0 auto;
	min-width: 1280px;
	width: 100%;
	height: 705px;
	margin: 0px;
	padding: 0px;
}
#homelogo{
	float: left;
	width: 40px;
	height: 40px;
	margin-top: -12px;
	margin-left: 50px;
}
.downdown{
	width: 35px;
	height: 35px;
	
	background-image: url('../images/down.gif');
	background-size: contain;
	background-position: center center;
	background-repeat: no-repeat;
	-webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -o-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
}
#firstdown{
	position: relative;
	left: 700px;
	top: 580px;
}
#seconddown{
	position: relative;
	left: 180px;
	top: -70px;
}

#firstbox{
	min-width: 1280px;
	width: 100%;
	background-image: url('../images/topbg.png');
	background-size: cover;
	background-position: center center;
	background-repeat: no-repeat;
	padding-top: 0px;
}

.navbar{
	min-width: 1280px;
	z-index: 100;
	position: fixed;
	width: 100%;
	height: 50px;
	background-color: rgba(0,0,0, 0.1);

}
.navlinks li{
	z-index: 100;
	display: inline-block;
	float: right;
	margin: 0px 100px 0px 0px;
	font-size: 18px;
	color: #FFFFFF;
	font-weight: 10px;
}

.doodle{
	display: inline-block;
	margin: 150px 20px 0px 100px;
	
	width: 444px;
	height: 395px;
	background-image: url('../images/doodle.png');
	background-position: center center;
	background-size: cover;
	background-repeat: no-repeat;
}


.name {
	position: relative;
	display: inline-block;
	
	width: 600px;
	height: 395px;	
}

.name div{
	display: inline-block;
	
	float: right;

}


.hello{
	width: 600px;
	height: 100px;
	background-image: url('../images/hello.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	
}

.myname{
	width: 600px;
	height: 245px;	
	background-image: url('../images/nametop.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	
}
.firstlinks{
	width: 500px;
	height: 40px;
	margin-top: -70px;
	margin-right: 20px;
}



#secondbox{
	background-color: #9dd6b4;
	-moz-box-shadow:    inset 0 0 10px #000000;
	-webkit-box-shadow: inset 0 0 10px #000000;
	box-shadow:         inset 0 0 10px #000000;
}

#secondbox div{
	display: inline-block;
}
.aboutme{
	background-image: url('../images/aboutme.png');
	background-size: cover;
	background-position: center center;
	background-repeat: no-repeat;
	width: 328px;
	height: 536px;
	margin: -215px 0px 0px 30px !important;
}
.skills{
	width: 830px;
	height: 620px;
	margin-bottom: -73px;
	background-image: url('../images/skills.png');
	background-size: contain;
	background-position: center center;
	background-repeat: no-repeat;
	padding-top: 120px;
	padding-left: 80px;
}
.skills span{
	display: inline-block;
	float: left;
}
.skillset{
	margin-top: 50px;
	width: 240px;
	height: 280px;
	font-size: 20px;
	text-align: center;
	
}
#design{
	margin-left: 40px;
	margin-top: 100px;
}
#frontend{
	font-size: 20px;
	margin-top: 120px;
	margin-left: -5px;
}
#backend{
	margin-top: 100px;
	margin-left: -20px;
}
#thirdbox{
	background-color: #FFFFFF;
	height: 1600px;
}

#thirdboxtitle{
	margin: -20px auto 0 auto;
	
	width: 800px;
	height: 300px;
	background-image: url('../images/projects.png');
	background-size: cover;
	background-repeat: no-repeat;
}

.projectcontainer{
	width: 1010px;
	margin: 0 auto;	
}
.projectcontainer div{
	display: inline-block;

}
.projectbox{
	width: 500px;
	height: 380px;
	border: 1px solid #FFFFFF;
	background-color: #9e9e9e;
}
.projectlinks{
	float: right;
	width: 120px;
	height: 30px;
	border: 1px solid #000000;
	border-radius: 5px;
}

#githubbutton{
	height: 20px;
	padding-top: 2px;
	background: #000000;
	color: #FFFFFF;
	text-align: center;
	position: relative;
	top: 280px;
	right: 60px;
}
#githubbutton:hover{
	background: #FFFFFF;
	color: #000000;

}
#sitebutton{
	height: 20px;
	padding-top: 2px;
	background: #000000;
	color: #FFFFFF;
	text-align: center;
	text-align: center;
	position: relative;
	top: 320px;
	right: -62px;
}
#sitebutton:hover{
	background: #FFFFFF;
	color: #000000;

}
#proj1{
	background-image: url('../images/proj1.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: contain;

}
#proj2{

	background-image: url('../images/proj2.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: contain;

}
#proj3{
	background-image: url('../images/proj5.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: contain;

}
#proj4{
	background-image: url('../images/proj6.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: contain;

}


#proj5{
	background-image: url('../images/proj3.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: contain;

}
#proj6{
	background-image: url('../images/proj4.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: contain;

}

#fourthbox{
	-moz-box-shadow:    inset 0 0 40px #000000;
	-webkit-box-shadow: inset 0 0 40px #000000;
	box-shadow:         inset 0 0 40px #000000;
	background-color: #3f3f3f;
	min-width: 800px;
	height: 360px;
	padding: 20px;

}

#fourthbox div{
	display: inline-block;
	float: left;
	margin-right: 20px;
	/*border: 1px solid black;	*/
}
.fourtboxdiv{
	height: 350px;
	display: inline-block;
}
.fourthlines{
	width: 220px;
	height: 50px;
}

#fourthsendline{
	width: 220px;
	height: 190px;
}

.photo{
	margin: 5px 40px;
	width: 330px;
	height: 340px;
	background-image: url('../images/selfpic.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: contain;
}
#fdivcontact{
	margin-left: 30px;
	width: 450px;
	background-image: url('../images/connect.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
}
#fdivinfo{
	width: 290px;
	background-image: url('../images/middle.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
	position: relative;
	bottom: -30px;
	text-align: center;


}
#fdivpicture{
	width: 300px;
	padding-left: 80px;
}

.divinfo{
	width: 290px;
	height: 50px;
	/*border: 1px solid #FFFFFF;*/
}
#findme{
	font-size: 18px;
	color: #FFFFFF;
	margin-top: 3px;
}
#linkedint{
	margin-top: 150px;
}
#githubt{
	margin-top: 20px;
}
#blogt{
	margin-top: 20px;
}
.bottomlink{
	width: 30px;
	height: 30px;
}

#bottomgit{
	margin-left: 20px;
}



.footer{
	min-width: 1280px;
	width: 100%;
	min-height: 20px;
	background-color: #9dd6b4;
	padding: 15px;

}
#leftfooter{
	width: 480px;
	height: 25px;
	float: left;
	margin-left: 40px;
}
#footertext{
	font-size: 12px;

}

#rightfooter{
	width: 500px;
	height: 25px;
	float: right;
	margin-right: 90px;	
}

